ImageField, listing.html and .gitignore.

--- a/auctions/templates/auctions/createListing.html
+++ b/auctions/templates/auctions/createListing.html
@@ -3,7 +3,7 @@
 {% block body %}
     <h2>Create Listing</h2>
 
-    <form action="{% url 'create_listing' %}" method="post">
+    <form action="{% url 'create_listing' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Submit">
