--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -11,6 +11,7 @@
         <li>Description: {{ listing.description }}</li>
         <li>Price: ${{ listing.price }}</li>
         <li>Owner: {{ listing.owner }}</li>
+        <li>Category: {{ listing.category }}</a></li>
     </ul>
 
 {% endblock %}
