'Bid' model. Removed the 'price' field, added 'starting_bid' in the form and 'current_price' in the view.

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -12,7 +12,7 @@
         {% endif %}
         <ul>
             <li>Description: {{ listing.description }}</li>
-            <li>Price: ${{ listing.price }}</li>
+            <li>Current Price: ${{ current_price }}</li>
         </ul>
     {% endfor %}
 {% endblock %}
