--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -9,7 +9,7 @@
         {% endif %}
 
         <li>Description: {{ listing.description }}</li>
-        <li>Price: ${{ listing.price }}</li>
+        <li>Current Price: ${{ current_price }}</li>
         <li>Owner: {{ listing.owner }}</li>
         <li>Category: {{ listing.category }}</a></li>
     </ul>
