--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -3,7 +3,7 @@
 {% block body %}
     <h2>Active Listings</h2>
 
-    {% for listing in active_listings %}
+    {% for listing, current_price in listings_with_prices %}
         <h3><a href="{% url 'listing' listing.id %}">{{ listing.title }}</a></h3>
         
         
