--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -1,6 +1,23 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
+      <!-- Display bid errors -->
+    {% if messages %}
+        {% for message in messages %}
+            <p>{{ message }}</p>
+        {% endfor %}
+    {% endif %}
+
+    <!-- Display winning message for the signed-in user -->
+    {% if winner_message %}
+        <p>{{ winner_message }}</p>
+    {% endif %}
+
+
+    {% if not listing.active %}
+        <p>Auction closed.</p>                                                                                                                       
+    {% endif %}
+
     <h3>{{ listing.title }}</h3>
 
     <ul>
@@ -23,6 +40,28 @@
             {% endif %}
         {% endif %}
     </div>
+
+
+    {% if listing.active %}
+        <!-- Bid form -->
+        {% if not listing.owner == user %}
+            <form method="post" action="{% url 'place_bid' listing_id=listing.id %}">
+                {% csrf_token %}
+                <label for="bid_amount">Bid Amount:</label>
+                <input type="number" id="bid_amount" name="bid_amount" step="any" required>
+                <button type="submit">Place Bid</button>
+            </form>
+        {% endif %}
+
+        <!-- Close auction form (for listing creator) -->
+        {% if user.is_authenticated and user == listing.owner %}
+            <form method="post" action="{% url 'close_auction' listing_id=listing.id %}">
+            {% csrf_token %}
+            <button type="submit">Close Auction</button>
+            </form>
+        {% endif %}
+    {% endif %}
+
     <section>
         <h3>Comments:</h3>
         {% if not listing.comments.all %}
