--- a/auctions/templates/auctions/createListing.html
+++ b/auctions/templates/auctions/createListing.html
@@ -1,11 +1,51 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Create Listing</h2>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <h2 class="text-center mt-4 mb-4">Create Listing</h2>
 
-    <form action="{% url 'create_listing' %}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Submit">
-    </form>
+                <form action="{% url 'create_listing' %}" method="post" enctype="multipart/form-data" class="p-4 border rounded">
+                    {% csrf_token %}
+                    <div class="form-group row">
+                        <label for="id_title" class="col-md-3 col-form-label">Title:</label>
+                        <div class="col-md-9">
+                            {{ form.title }}
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="id_description" class="col-md-3 col-form-label">Description:</label>
+                        <div class="col-md-9">
+                            {{ form.description }}
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="id_starting_bid" class="col-md-3 col-form-label">Starting Bid:</label>
+                        <div class="col-md-9">
+                            {{ form.starting_bid }}
+                            {% if form.starting_bid.errors %}
+                                <small class="text-danger">{{ form.starting_bid.errors }}</small>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="id_image" class="col-md-3 col-form-label">Image:</label>
+                        <div class="col-md-9">
+                            {{ form.image }}
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="id_category" class="col-md-3 col-form-label">Category:</label>
+                        <div class="col-md-9">
+                            {{ form.category }}
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
